--- a/angular11-microfrontends-scully/package.json
+++ b/angular11-microfrontends-scully/package.json
@@ -16,7 +16,8 @@
     "scully:light": "scully",
     "scully:serve": "scully serve",
     "scully:route": "scully --scanRoutes",
-    "scully:debug": "scully --scanRoutes --stats --showGuessError --watch --logSeverity=normal"
+    "scully:debug": "scully --scanRoutes --stats --showGuessError --watch --logSeverity=normal",
+    "e2e:ci": "yarn build:shared && yarn start:shell & wait-on http-get://localhost:4200/ && yarn start:profile & wait-on http-get://localhost:4201/ && yarn start:product & wait-on http-get://localhost:4202/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "private": true,
   "resolutions": {
@@ -63,6 +64,7 @@
     "protractor": "7.0.0",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "4.3.5"
+    "typescript": "4.0.2",
+    "wait-on": "7.0.1"
   }
 }
