--- a/react-nextjs/react-host-remote/package.json
+++ b/react-nextjs/react-host-remote/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"cd host; npm run dev\" \"cd remote; npm run dev\""
+    "start": "concurrently \"cd host; npm run dev\" \"cd remote; npm run dev\"",
+    "e2e:ci": "yarn start & wait-on http-get://localhost:8080/ && npx cypress run --config-file ../../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "private": true,
   "workspaces": [
@@ -14,6 +15,7 @@
   "author": "Omher",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "7.3.0"
+    "concurrently": "7.3.0",
+    "wait-on": "^7.0.1"
   }
 }
