--- a/server-side-render-only/package.json
+++ b/server-side-render-only/package.json
@@ -6,7 +6,8 @@
     "buildHost": "webpack --config=hostServer/webpack.config.js -w",
     "startHost": "nodemon hostServer/public/server/server.js",
     "buildRemote": "webpack --config=remoteServer/webpack.config.js -w",
-    "startRemote": "nodemon remoteServer/public/server/server.js"
+    "startRemote": "nodemon remoteServer/public/server/server.js",
+    "e2e:ci": "yarn start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "license": "MIT",
   "author": {
@@ -19,8 +20,9 @@
     "@babel/preset-react": "7.18.6",
     "babel-loader": "8.2.5",
     "concurrently": "7.3.0",
-    "nodemon": "2.0.18",
     "lerna": "3.22.1",
+    "nodemon": "2.0.18",
+    "wait-on": "7.0.1",
     "webpack": "5.72.1",
     "webpack-cli": "4.10.0"
   },
