--- a/angular11-microfrontends-ngrx/package.json
+++ b/angular11-microfrontends-ngrx/package.json
@@ -10,7 +10,8 @@
     "build:profile": "ng build mdmf-profile --prod",
     "test": "ng test mdmf-shared & ng test mdmf-profile & ng test mdmf-shell",
     "lint": "ng lint",
-    "e2e": "ng e2e mdmf-profile & ng e2e mdmf-shell"
+    "e2e": "ng e2e mdmf-profile & ng e2e mdmf-shell",
+    "e2e:ci": "yarn build:shared && yarn start:shell & wait-on http-get://localhost:4200/ && yarn start:profile & wait-on http-get://localhost:4201/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "private": true,
   "resolutions": {
@@ -25,8 +26,8 @@
     "@angular/platform-browser": "11.2.14",
     "@angular/platform-browser-dynamic": "11.2.14",
     "@angular/router": "11.2.14",
-    "@ngrx/store": "^11.0.0-beta.0",
     "@ngrx/router-store": "^11.0.0-beta.0",
+    "@ngrx/store": "^11.0.0-beta.0",
     "bootstrap": "^4.5.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -54,6 +55,7 @@
     "protractor": "7.0.0",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "4.3.5"
+    "typescript": "4.0.2",
+    "wait-on": "7.0.1"
   }
 }
