--- a/angular12-microfrontends/package.json
+++ b/angular12-microfrontends/package.json
@@ -9,7 +9,8 @@
     "build:profile": "ng build mdmf-profile --configuration production",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "e2e:ci": "ng serve mdmf-shell & wait-on http-get://localhost:4200/ && ng serve mdmf-profile & wait-on http-get://localhost:4201/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "private": true,
   "dependencies": {
@@ -46,6 +47,7 @@
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
     "typescript": "4.3.5",
+    "wait-on": "^7.0.1",
     "webpack": "5.72.1"
   }
 }
