--- a/dynamic-system-host/package.json
+++ b/dynamic-system-host/package.json
@@ -4,10 +4,12 @@
     "start": "lerna run --scope @dynamic-system-host/* --parallel start",
     "build": "lerna run --scope @dynamic-system-host/* build",
     "serve": "lerna run --scope @dynamic-system-host/* --parallel serve",
-    "clean": "lerna run --scope @dynamic-system-host/* --parallel clean"
+    "clean": "lerna run --scope @dynamic-system-host/* --parallel clean",
+    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
-    "lerna": "3.22.1"
+    "lerna": "3.22.1",
+    "wait-on": "7.0.1"
   },
   "workspaces": {
     "packages": [
