--- a/shared-context/package.json
+++ b/shared-context/package.json
@@ -4,10 +4,12 @@
     "start": "lerna run --scope @shared-context/* --parallel start",
     "build": "lerna run --scope @shared-context/* build",
     "serve": "lerna run --scope @shared-context/* --parallel serve",
-    "clean": "lerna run --scope @shared-context/* --parallel clean"
+    "clean": "lerna run --scope @shared-context/* --parallel clean",
+    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "lerna": "3.22.1",
+    "wait-on": "7.0.1",
     "webpack-cli": "^5.0.1"
   }
 }
