--- a/vue2-in-vue3/package.json
+++ b/vue2-in-vue3/package.json
@@ -4,9 +4,11 @@
     "start": "lerna run --scope @vue2-in-vue3/* --parallel start",
     "build": "lerna run --scope @vue2-in-vue3/* build",
     "serve": "lerna run --scope @vue2-in-vue3/* --parallel serve",
-    "clean": "lerna run --scope @vue2-in-vue3/* --parallel clean"
+    "clean": "lerna run --scope @vue2-in-vue3/* --parallel clean",
+    "e2e:ci": "yarn start & wait-on http-get://localhost:3002/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
-    "lerna": "3.22.1"
+    "lerna": "3.22.1",
+    "wait-on": "7.0.1"
   }
 }
