--- a/vue3-demo-federation-with-vite/package.json
+++ b/vue3-demo-federation-with-vite/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "scripts": {
     "build": "pnpm --parallel --filter \"./**\" build",
-    "serve": "pnpm --parallel --filter \"./**\"  serve"
+    "serve": "pnpm --parallel --filter \"./**\"  serve",
+    "e2e:ci": "pnpm build && pnpm serve & wait-on http-get://localhost:5000/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
+  },
+  "devDependencies": {
+    "wait-on": "7.0.1"
   }
 }
