--- a/vue3-demo/package.json
+++ b/vue3-demo/package.json
@@ -4,9 +4,11 @@
     "start": "lerna run --scope @vue3-demo/* --parallel start",
     "build": "lerna run --scope @vue3-demo/* build",
     "serve": "lerna run --scope @vue3-demo/* --parallel serve",
-    "clean": "lerna run --scope @vue3-demo/* --parallel clean"
+    "clean": "lerna run --scope @vue3-demo/* --parallel clean",
+    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
-    "lerna": "3.22.1"
+    "lerna": "3.22.1",
+    "wait-on": "^7.0.1"
   }
 }
