--- a/.github/workflows/cypress-test-pipeline.yml
+++ b/.github/workflows/cypress-test-pipeline.yml
@@ -5,10 +5,12 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+
   forked_master_status:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           repository: ${{ github.event.pull_request.head.repo.full_name }}
@@ -19,7 +21,9 @@ jobs:
           CURRENT_REPO: ${{ github.event.pull_request.head.repo.url }}
           BASE_REPO_URL: ${{ github.event.pull_request.base.repo.url }}
           BASE_BRANCH: ${{ github.event.pull_request.base.ref }}
-      - if: ${{ github.event.repository.fork }} == 'false'
+
+      - name: Check if forked master is up to date
+        if: ${{ github.event.repository.fork }} == 'false'
         run: |
           git remote add base https://github.com/${{github.repository}}
           git remote -v
@@ -47,13 +51,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: forked_master_status
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           ref: ${{ github.event.pull_request.head.ref }}
           fetch-depth: 0
-      - run: |
+
+      - name: Check if branch rebased
+        run: |
           git remote add base https://github.com/${{github.repository}}
           git remote -v
           git fetch --all
@@ -65,26 +72,14 @@ jobs:
             echo "Branch has confllicts! Please rebase the branch"
           fi
 
-  # install-deps:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #       with:
-  #         repository: ${{ github.event.pull_request.head.repo.full_name }}
-  #         ref: ${{ github.event.pull_request.head.ref }}
-  #         fetch-depth: 0
-
-  #     - name: Install dependencies
-  #       run: |
-  #         yarn install --frozen-lockfile
-
   setup-matrix:
     runs-on: ubuntu-latest
     needs: rebase
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           ref: ${{ github.event.pull_request.head.ref }}
@@ -107,16 +102,36 @@ jobs:
       fail-fast: false
       matrix: ${{fromJson(needs.setup-matrix.outputs.matrix)}}
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           ref: ${{ github.event.pull_request.head.ref }}
           fetch-depth: 0
 
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
+
+      - name: Cache Yarn and Cypress
+        uses: actions/cache@v3
+        id: yarn-cache
+        with:
+          path: |
+            **/node_modules
+            ~/.cache/Cypress
+            ${{ steps.yarn-cache-dir-path.outputs.dir }} 
+          key: ${{ runner.os }}-${{ matrix.container }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ matrix.container }}-yarn-
+            ${{ runner.os }}-${{ matrix.container }}-
+
       - name: Install sample deps
-        run: 
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: |
+          echo "YARN CACHE CHANGED"
           npx lerna bootstrap --scope=${{ matrix.container }}
 
-      - name: Run sample tests
+      - name: Run sample e2e tests
         run: 
           npx lerna run --scope=${{ matrix.container }} --parallel e2e:ci
