--- a/nextjs-ssr-medusa/package.json
+++ b/nextjs-ssr-medusa/package.json
@@ -18,6 +18,6 @@
     "concurrently": "^7.0.0"
   },
   "resolutions": {
-    "@module-federation/dashboard-plugin": "file:./module-federation-dashboard-plugin-v2.8.12.tgz"
+    "@module-federation/dashboard-plugin": "2.8.0-beta.1"
   }
 }
