--- a/nextjs-ssr-medusa/checkout/package.json
+++ b/nextjs-ssr-medusa/checkout/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@module-federation/nextjs-mf": "6.2.0",
-    "@module-federation/dashboard-plugin": "file:../module-federation-dashboard-plugin-v2.8.3.tgz",
+    "@module-federation/dashboard-plugin": " 2.8.0-beta.4",
     "lodash": "4.17.21",
     "next": "12.2.2",
     "react": "^18.2.0",
