--- a/nextjs-ssr-react-query/package.json
+++ b/nextjs-ssr-react-query/package.json
@@ -34,7 +34,7 @@
     "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
-    "babel-jest": "^29.4.1",
+    "babel-jest": "29.5.0",
     "babel-plugin-styled-components": "1.13.3",
     "cypress": "^12.2.0",
     "eslint": "~8.15.0",
@@ -45,8 +45,8 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
+    "jest": "29.5.0",
+    "jest-environment-jsdom": "29.5.0",
     "nx": "15.8.7",
     "prettier": "^2.8.5",
     "react-test-renderer": "18.2.0",
