--- a/vite-vue-microfrontends/remote/package.json
+++ b/vite-vue-microfrontends/remote/package.json
@@ -22,7 +22,7 @@
     "@softarc/native-federation-esbuild": "^1.1.0",
     "@types/node": "^18.11.12",
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "@vitejs/plugin-vue-jsx": "3.0.1",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
