--- a/medusa-example/dsl/package.json
+++ b/medusa-example/dsl/package.json
@@ -13,10 +13,11 @@
     "less": "4.1.3",
     "less-loader": "11.1.0",
     "serve": "14.0.1",
-    "style-loader": "3.3.2",
+    "style-loader": "3.3.1",
     "webpack": "5.74.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.11.1"
+    "webpack-dev-server": "4.11.1",
+    "esbuild-loader": "2.20.0"
   },
   "scripts": {
     "start": "webpack-cli serve",
