--- a/medusa-example/home/package.json
+++ b/medusa-example/home/package.json
@@ -13,10 +13,11 @@
     "less": "4.1.3",
     "less-loader": "11.1.0",
     "serve": "14.0.1",
-    "style-loader": "3.3.2",
+    "style-loader": "3.3.1",
     "webpack": "5.74.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.11.1"
+    "webpack-dev-server": "4.11.1",
+    "esbuild-loader": "2.20.0"
   },
   "scripts": {
     "start": "webpack-cli serve",
@@ -27,7 +28,6 @@
   "dependencies": {
     "@ant-design/icons": "4.7.0",
     "antd": "4.24.0",
-    "esbuild-loader": "2.20.0",
     "lodash": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0"
