--- a/medusa-example/utils/package.json
+++ b/medusa-example/utils/package.json
@@ -11,7 +11,8 @@
     "serve": "14.0.1",
     "webpack": "5.74.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.11.1"
+    "webpack-dev-server": "4.11.1",
+    "esbuild-loader": "2.20.0"
   },
   "scripts": {
     "start": "webpack-cli serve",
