--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
       "./different-react-versions-16-18",
       "./different-react-versions-isolated",
       "./different-react-versions-isolated/*",
-      "./different-react-versions-typescript",
       "./different-react-versions-typescript/*",
       "./different-react-versions",
       "./different-react-versions/*",
@@ -68,9 +67,10 @@
       "./genesis/*",
       "./loadable-react-16",
       "./loadable-react-18",
-      "./loadable-react-18/*",
       "./loadable-react-spectrum",
       "./loadable",
+      "./native-federation-react",
+      "./native-federation-react/*",
       "./nested",
       "./nested/*",
       "./nextjs-bi-directional/*",
@@ -82,7 +82,6 @@
       "./nextjs-ssr-react-query",
       "./react-16-17-18-ssr",
       "./react-18-code-splitting",
-      "./react-18-code-splitting/*",
       "./react-18-server-2-server",
       "./react-18-ssr",
       "./react-hmr",
@@ -111,6 +110,8 @@
       "./shared-routes2/*",
       "./shared-routing",
       "./shared-routing/*",
+      "./medusa-example/*",
+      "./medusa-example",
       "./shared-store-cross-framework",
       "./shared-store-cross-framework/*",
       "./startup-code",
@@ -152,7 +153,7 @@
     ]
   },
   "devDependencies": {
-    "@shelex/cypress-allure-plugin": "2.37.0",
+    "@shelex/cypress-allure-plugin": "2.35.2",
     "allure-commandline": "2.21.0",
     "concurrently": "7.3.0",
     "cross-spawn": "7.0.3",
@@ -164,8 +165,8 @@
     "husky": "7.0.4",
     "jest": "26.6.3",
     "lerna": "6.4.1",
-    "mocha": "10.2.0",
-    "prettier": "2.8.6",
+    "mocha": "10.1.0",
+    "prettier": "2.8.4",
     "pretty-quick": "3.1.3",
     "wait-on": "7.0.1"
   },
