--- a/medusa-example/utils/package.json
+++ b/medusa-example/utils/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {
     "@babel/core": "7.19.6",
     "@babel/preset-react": "7.18.6",
-    "@module-federation/dashboard-plugin": "2.7.2",
+    "@module-federation/dashboard-plugin": "^2.8.0-beta.6",
     "@webpack-cli/serve": "1.7.0",
     "babel-loader": "9.0.1",
     "serve": "14.0.1",
