--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
       "./different-react-versions-16-18",
       "./different-react-versions-isolated",
       "./different-react-versions-isolated/*",
+      "./different-react-versions-typescript",
       "./different-react-versions-typescript/*",
       "./different-react-versions",
       "./different-react-versions/*",
@@ -155,7 +156,7 @@
     ]
   },
   "devDependencies": {
-    "@shelex/cypress-allure-plugin": "2.35.2",
+    "@shelex/cypress-allure-plugin": "2.37.0",
     "allure-commandline": "2.21.0",
     "concurrently": "7.3.0",
     "cross-spawn": "7.0.3",
@@ -167,8 +168,8 @@
     "husky": "7.0.4",
     "jest": "26.6.3",
     "lerna": "6.4.1",
-    "mocha": "10.1.0",
-    "prettier": "2.8.4",
+    "mocha": "10.2.0",
+    "prettier": "2.8.6",
     "pretty-quick": "3.1.3",
     "wait-on": "7.0.1"
   },
