--- a/angular14-react/react-user-list/package.json
+++ b/angular14-react/react-user-list/package.json
@@ -7,7 +7,7 @@
     "@babel/preset-react": "7.18.6",
     "@types/react": "^18.0.21",
     "babel-loader": "^8.2.5",
-    "css-loader": "^6.7.1",
+    "css-loader": "6.7.3",
     "file-loader": "6.2.0",
     "serve": "13.0.4",
     "style-loader": "^3.3.1",
