chore(deps): update dependency json5 to v2.2.3

--- a/native-federation-react/package.json
+++ b/native-federation-react/package.json
@@ -28,7 +28,7 @@
     "concurrently": "^7.3.0",
     "esbuild": "^0.15.5",
     "esm-node-services": "^0.7.4",
-    "json5": "^2.2.1",
+    "json5": "2.2.3",
     "serve": "^14.0.1",
     "wait-on": "7.0.1"
   },
