--- a/apollo-client/app1/package.json
+++ b/apollo-client/app1/package.json
@@ -5,8 +5,8 @@
     "start": "yarn build && yarn serve",
     "serve": "node dist/server/main.js",
     "build": "yarn build:server && yarn build:client",
-    "build:client": "rimraf dist/client && webpack --mode production --progress --config config/webpack.client.js",
-    "build:server": "rimraf dist/server && webpack --mode production --progress --config config/webpack.server.js"
+    "build:client": "rimraf dist/client && webpack --mode development --progress --config config/webpack.client.js",
+    "build:server": "rimraf dist/server && webpack --mode development --progress --config config/webpack.server.js"
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet": "6.1.0",
+    "react-router-dom": "^6.6.1",
     "regenerator-runtime": "0.13.11",
     "serialize-javascript": "^6.0.0"
   },
@@ -27,13 +28,20 @@
     "@babel/preset-env": "7.18.2",
     "@babel/preset-react": "7.17.12",
     "@babel/preset-typescript": "7.18.6",
-    "@module-federation/node": "0.12.2",
+    "@module-federation/node": "0.12.0",
     "@types/express": "4.17.14",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "@types/react-helmet": "6.1.5",
     "@types/serialize-javascript": "^5.0.2",
+    "autoprefixer": "^10.4.13",
     "babel-loader": "8.2.5",
+    "css-loader": "^6.7.3",
+    "css-minimizer-webpack-plugin": "^4.2.2",
+    "mini-css-extract-plugin": "^2.7.2",
+    "postcss-loader": "^7.0.2",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
     "rimraf": "3.0.2",
     "webpack": "5.73.0",
     "webpack-cli": "4.9.2",
