--- a/apollo-client/app2/package.json
+++ b/apollo-client/app2/package.json
@@ -5,8 +5,8 @@
     "start": "yarn build && yarn serve",
     "serve": "node dist/server/main.js",
     "build": "yarn build:server && yarn build:client",
-    "build:client": "rimraf dist/client && webpack --mode production --progress --config config/webpack.client.js",
-    "build:server": "rimraf dist/server && webpack --mode production --progress --config config/webpack.server.js"
+    "build:client": "rimraf dist/client && webpack --mode development --progress --config config/webpack.client.js",
+    "build:server": "rimraf dist/server && webpack --mode development --progress --config config/webpack.server.js"
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
@@ -27,7 +27,7 @@
     "@babel/preset-env": "7.18.2",
     "@babel/preset-react": "7.17.12",
     "@babel/preset-typescript": "7.18.6",
-    "@module-federation/node": "0.12.2",
+    "@module-federation/node": "0.12.0",
     "@types/express": "4.17.14",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
