--- a/package.json
+++ b/package.json
@@ -67,10 +67,9 @@
       "./genesis/*",
       "./loadable-react-16",
       "./loadable-react-18",
+      "./loadable-react-18/*",
       "./loadable-react-spectrum",
       "./loadable",
-      "./native-federation-react",
-      "./native-federation-react/*",
       "./native-federation-tests-typescript-plugins",
       "./native-federation-tests-typescript-plugins/*",
       "./nested",
@@ -84,6 +83,7 @@
       "./nextjs-ssr-react-query",
       "./react-16-17-18-ssr",
       "./react-18-code-splitting",
+      "./react-18-code-splitting/*",
       "./react-18-server-2-server",
       "./react-18-ssr",
       "./react-hmr",
@@ -112,8 +112,6 @@
       "./shared-routes2/*",
       "./shared-routing",
       "./shared-routing/*",
-      "./medusa-example/*",
-      "./medusa-example",
       "./shared-store-cross-framework",
       "./shared-store-cross-framework/*",
       "./startup-code",
@@ -155,7 +153,7 @@
     ]
   },
   "devDependencies": {
-    "@shelex/cypress-allure-plugin": "2.35.2",
+    "@shelex/cypress-allure-plugin": "2.37.0",
     "allure-commandline": "2.21.0",
     "concurrently": "7.3.0",
     "cross-spawn": "7.0.3",
@@ -167,8 +165,8 @@
     "husky": "7.0.4",
     "jest": "26.6.3",
     "lerna": "6.4.1",
-    "mocha": "10.1.0",
-    "prettier": "2.8.7",
+    "mocha": "10.2.0",
+    "prettier": "2.8.6",
     "pretty-quick": "3.1.3",
     "wait-on": "7.0.1"
   },
