--- a/medusa-nx-native-federation-example/package.json
+++ b/medusa-nx-native-federation-example/package.json
@@ -45,7 +45,7 @@
     "@nrwl/web": "14.7.8",
     "@nrwl/workspace": "15.4.5",
     "@swc-node/register": "^1.4.2",
-    "@swc/cli": "~0.1.55",
+    "@swc/cli": "0.1.62",
     "@swc/core": "1.3.46",
     "@testing-library/react": "13.3.0",
     "@types/jest": "28.1.8",
