--- a/native-federation-react/package.json
+++ b/native-federation-react/package.json
@@ -27,7 +27,7 @@
     "@types/node": "^18.7.13",
     "concurrently": "^7.3.0",
     "esbuild": "^0.15.5",
-    "esm-node-services": "^0.7.4",
+    "esm-node-services": "0.7.13",
     "json5": "2.2.3",
     "serve": "^14.0.1",
     "wait-on": "7.0.1"
