--- a/css-isolation/app2/package.json
+++ b/css-isolation/app2/package.json
@@ -9,7 +9,7 @@
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "5.5.0",
     "serve": "12.0.1",
-    "style-loader": "^3.3.1",
+    "style-loader": "3.3.2",
     "webpack": "5.61.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.2.1"
