--- a/medusa-nx-native-federation-example/package.json
+++ b/medusa-nx-native-federation-example/package.json
@@ -68,7 +68,7 @@
     "jest-environment-jsdom": "28.1.3",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "15.4.5",
-    "prettier": "^2.8.3",
+    "prettier": "2.8.7",
     "react-test-renderer": "18.2.0",
     "serve": "^14.1.2",
     "ts-jest": "28.0.8",
