--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
       "./different-react-versions-16-18",
       "./different-react-versions-isolated",
       "./different-react-versions-isolated/*",
+      "./different-react-versions-typescript",
       "./different-react-versions-typescript/*",
       "./different-react-versions",
       "./different-react-versions/*",
@@ -65,7 +66,6 @@
       "./federated-npm/*",
       "./genesis",
       "./genesis/*",
-      "./loadable-react-16",
       "./loadable-react-18",
       "./loadable-react-18/*",
       "./loadable-react-spectrum",
@@ -85,6 +85,7 @@
       "./react-18-code-splitting",
       "./react-18-code-splitting/*",
       "./react-18-server-2-server",
+      "./react-18-server-2-server/*",
       "./react-18-ssr",
       "./react-hmr",
       "./react-hmr/*",
