--- a/nextjs-ssr/checkout/package.json
+++ b/nextjs-ssr/checkout/package.json
@@ -8,7 +8,7 @@
     "start": "NODE_ENV=production next start"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "6.0.7",
+    "@module-federation/nextjs-mf": "6.3.1-beta.1",
     "lodash": "4.17.21",
     "next": "12.3.4",
     "react": "^18.2.0",
