--- a/simple-node/node-local-remote/package.json
+++ b/simple-node/node-local-remote/package.json
@@ -5,6 +5,6 @@
     "start": "webpack serve --config webpack.config.js"
   },
   "dependencies": {
-    "@module-federation/node": "next"
+    "@module-federation/node": "^2.0.2-beta.2"
   }
 }
